--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,12 @@
   --background: #f6eeee;
   --hero-text: #fff;
   --navbar: #f0d7d7;
-
-  /* --secondary-color: #1c3fa8;
-    --dark-color: #002240;
-    --light-color: #f4f4f4;
-    --success-color: #5cb85c;
-    --error-color: #d9534f; */
 }
 
 * {
   margin: 0;
   padding: 0;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 body {
@@ -116,9 +110,12 @@ ul#nav-links li a.contact:hover {
   background-color: #f6eeee;
   font-family: "Montserrat", sans-serif;
   text-align: center;
+  position: relative;
 }
 
 .testimonies {
+    position: absolute;
+    top: 70px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
@@ -139,6 +136,7 @@ ul#nav-links li a.contact:hover {
   width: 100px;
   height: 100px;
   border-radius: 50%;
+  border: #964747 2px solid;
 }
 
 .card {
