--- a/utilities.css
+++ b/utilities.css
@@ -3,11 +3,16 @@
 .lead {
     font-size: 30px;
     font-weight: bolder;
+    font-family: 'Permanent Marker', cursive;
 }
+
+
+/* font-family: 'Gilda Display', serif;
+font-family: 'Manrope', sans-serif;*/
 
 .sm {
     font-size: 1rem;
-}
+} 
 
 .md {
     font-size: 2rem;
